@@ -15,6 +15,7 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Queue;
 
+import com.badlogic.gdx.utils.IntMap;
 import org.mini2Dx.core.controller.button.ControllerButton;
 import org.mini2Dx.ui.element.Actionable;
 import org.mini2Dx.ui.element.TabView;
@@ -29,7 +30,7 @@ import org.mini2Dx.ui.style.TabStyleRule;
  */
 public class TabViewRenderNode extends ParentRenderNode<TabView, TabStyleRule>implements NavigatableRenderNode {
 	private final Map<String, RenderNode<?, ?>> elementIdLookupCache = new HashMap<String, RenderNode<?, ?>>();
-	private final Map<Integer, String> keyboardHotkeys = new HashMap<Integer, String>();
+	private final IntMap<String> keyboardHotkeys = new IntMap<String>();
 	private final Map<String, String> controllerHotkeys = new HashMap<String, String>();
 
 	public TabViewRenderNode(ParentRenderNode<?, ?> parent, TabView tabView) {
